Lagt till startkooordinater